fixed geochart flickering bug (cause: padding)

--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body {
 header {
 	background-color: #060;
 	padding: 10px 20px;
-	height: 30px;
+	height: 40px;
 }
 
 #logo {
 	float: left;
 	display: block;
-	width: 111px;
-	height: 30px;
+	width: 131px;
+	height: 40px;
 	background: url('img/logo.png') 0 0 no-repeat transparent;
 	text-indent: -1000em;
 }
@@ -42,7 +42,7 @@ header {
 #main-menu a {
 	float: left;
 	margin-left: 40px;
-	line-height: 30px;
+	line-height: 40px;
 	color: #fff;
 	font-size: 16px;
 	text-decoration: none;
@@ -51,7 +51,8 @@ header {
 #main-geo-map {
 	width: 100%;
 	height: 600px;
-	padding: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
